Fix width for timer circle on mobile

--- a/frontend/src/components/organisms/PomodoroTimer.scss
+++ b/frontend/src/components/organisms/PomodoroTimer.scss
@@ -17,7 +17,7 @@
 
 .circle-container {
   position: relative;
-  width: 300px;
+  width: auto;
   height: 380px;
   margin: 0 auto;
   display: block;
